k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: games-strip         
  namespace: games
spec:
  stripPrefix:
    prefixes:
      - /api/games
    forceSlash: false
