k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: games-service
  namespace: games
  labels:
    app: games
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: games
